--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.5.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.ui": "1.0.0-preview.14",
     "com.unity.vectorgraphics": "2.0.0-preview.17",
     "com.unity.visualscripting": "1.6.1",
     "com.unity.modules.ai": "1.0.0",
