Created a new C3 Console .NET core Visual Studio project called "HashesCreator". This creates hashes of all the files which will be used when updating the apps/programs

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ Thumbs.db
 Jam54LauncherStarter/bin
 Jam54LauncherStarter/obj
 Jam54LauncherStarter/Releases
+
+HashesCreator/bin
+HashesCreator/obj
+HashesCreator/Releases
