Updated gitignore, to ignore bin, obj and Releases folders. But it still includes the .sln, .csproj files etc, that are in the parent folder of the bin/obj folders

--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,13 @@ Icon?
 ehthumbs.db
 Thumbs.db
 
+!Jam54LauncherStarter/**
+
 Jam54LauncherStarter/bin
 Jam54LauncherStarter/obj
 Jam54LauncherStarter/Releases
+
+!HashesCreator/**
 
 HashesCreator/bin
 HashesCreator/obj
