Added visual studio project files to repo

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ Jam54LauncherStarter/Releases
 HashesCreator/bin
 HashesCreator/obj
 HashesCreator/Releases
+
+!.vsconfig
+!Assembly-CSharp.csproj
+!Jam54Launcher.sln
