Added the 'MakePNGGrayScale' project to the repo. This converts all the .png files in the current and subdirectories to a grayscale variant.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,12 @@ HashesCreator/bin
 HashesCreator/obj
 HashesCreator/Releases
 
+!MakePNGGrayScale/**
+
+MakePNGGrayScale/bin
+MakePNGGrayScale/obj
+MakePNGGrayScale/Releases
+
 !.vsconfig
 !Assembly-CSharp.csproj
 !Jam54Launcher.sln
