--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -53,12 +53,15 @@
     <UnityVersion>2021.2.0b12</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Analyzer Include="D:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Assets\Jam54Launcher\Scripts\AppsInfo.cs" />
     <Compile Include="Assets\Jam54Launcher\Scripts\Navigation.cs" />
+    <Compile Include="Assets\Jam54Launcher\Scripts\UIDocumentLocalization.cs" />
     <Compile Include="Assets\Jam54Launcher\Scripts\MenuData.cs" />
     <Compile Include="Assets\Jam54Launcher\Scripts\InitializeUI.cs" />
     <Compile Include="Assets\Jam54Launcher\Scripts\SaveLoadManager.cs" />
-    <Compile Include="Assets\Jam54Launcher\Scripts\UIDocumentLocalization.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
