--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,7 @@
     <UnityVersion>2021.2.0b12</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="D:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Jam54Launcher\Scripts\AppsInfo.cs" />
@@ -62,6 +62,7 @@
     <Compile Include="Assets\Jam54Launcher\Scripts\MenuData.cs" />
     <Compile Include="Assets\Jam54Launcher\Scripts\InitializeUI.cs" />
     <Compile Include="Assets\Jam54Launcher\Scripts\SaveLoadManager.cs" />
+    <Compile Include="Assets\Jam54Launcher\Scripts\AppsUpdater.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
