Published version 2.0.1 of the Jam54Launcher and shortcuts now get deleted when changing the path

--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ Thumbs.db
 
 Jam54LauncherStarter/bin
 Jam54LauncherStarter/obj
-Jam54LauncherStarter/Releases
+!Jam54LauncherStarter/Releases
 
 !HashesCreator/**
 
