Implemented a system to load all of the application's details into a list with ApplicationInfo objects. Which can then be used to display these applications within the launcher

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=Could not close "data access context"
+CouldntCreateDAC=Could not create "data access context"
+CouldntLoadApplicationInfos=Could not load the applications' details from the database.
 Error=Error
 ErrorLoadingDataFromDisk=The program encountered an error while trying to load data from the disk. 
 ErrorLoadingJam54LauncherConfig=Couldn't load config/prefs from Jam54LauncherConfig.properties
