Translated the app

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -1,13 +1,62 @@
+AllPlatforms=All Platforms
+Alphabetical=Alphabetical
+Android=Android
+BackToLibrary=Back To Library
+CALCULATINGHASHES=CALCULATING HASHES
+CloseAppsAndDownloads=Please close all currently running apps that were installed using the Jam54Launcher and cancel any ongoing downloads.
+CloseOpenedAppBeforeUninstall=Please ensure that "{0}" is closed before proceeding with the uninstallation process.
+CouldntCalculateHash=Couldn't calculate hash
 CouldntCloseDAC=Could not close "data access context"
 CouldntCreateDAC=Could not create "data access context"
+CouldntCreateShortcut=Couldn't create shortcut.
 CouldntLoadApplicationInfos=Could not load the applications' details from the database.
+CouldntLoadLanguages=Coulnd't load the list of supported languages
+CouldntRetrieveLauncherVersion=Couldn't retrieve the launcher's version
+CreateDesktopShortcut=Create Desktop Shortcut
+CurrentlyInstalledApps=Currently installed apps
+Download=Download
+DOWNLOADING=DOWNLOADING
 Error=Error
 ErrorLoadingDataFromDisk=The program encountered an error while trying to load data from the disk. 
 ErrorLoadingJam54LauncherConfig=Couldn't load config/prefs from Jam54LauncherConfig.properties
+ErrorMergeSplitFiles=Encountered an error while trying to merge split files.
+ErrorReadingSplitTXT=Encountered an error while trying to read Split.txt
 ErrorSavingDataToDisk=The program encountered an error while trying to save data to the disk. 
 FailedCheckingUpdates=Failed to check for updates, please ensure you hava a stable network connection.
 FailedDownloadingNewJam54LauncherVersion=Failed to download a new version of the Jam54 Launcher, please ensure you have a stable network connection.
 FailedToStartUpdater=Failed to start the Updater
+Games=Games
+GamesProgramsInstallationPath=Games & Programs installation path
+GoToStorePage=Go To Store Page
+INSTALL=INSTALL
+InstallationLocation=Installation Location
+INSTALLING=INSTALLING
+KindlyHoldForInstall=Kindly hold on whilst "{0}" concludes its installation procedure.
+KindlyHoldForUninstall=Kindly hold on until "{0}"'s uninstall procedure finishes.
+KindlyHoldForValidationProcedure=Kindly hold on whilst "{0}" concludes its file validation procedure.
+Language=Language
+LastUpdated=Last Updated
+LatestUpdate=Latest Update
+Launch=Launch
+NoAppsForFilters=There were no applications that matched the filters you specified.
 Ok=OK
+Platform=Platform
+Programs=Programs
+ReleaseDate=Release Date
+REMOVINGOLDFILES=REMOVING OLD FILES
 Restart=Restart
+RestartRequiredForEffect=Changing this setting will only take effect after a restart.
+Search=Search
+Settings=Settings
+SortBy=Sort By:
+START=START
+Uninstall=Uninstall
+UNINSTALL=UNINSTALL
+UNINSTALLING=UNINSTALLING
+Update=Update
+UPDATE=UPDATE
 UpdateAvailable=An updated version of Jam54Launcher is available and will be installed at the next launch.
+VerifyFileIntegrity=Verify file integrity
+Version=Version
+Web=Web
+Windows=Windows
