Added missing translations

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=Verify file integrity
 Version=Version
 Web=Web
 Windows=Windows
+ChooseGamesProgramsInstallLocation=Choose a location for Games and Programs installs.
+Appearance=Appearance
+ColorTheme=Color theme
+CouldntOpenWebsite=Couldn't open website.
+CustomizeAppearance=Customize the appearance of the Jam54 Launcher.
+Dark=Dark
+Light=Light
+SelectDisplayLangauge=Select a display language.
+CouldntLaunchApplication=Couldn't launch application.
+CouldntRemoveShortcut=Couldn't remove shortcut.
