--- a/Jam54_Launcher/pom.xml
+++ b/Jam54_Launcher/pom.xml
@@ -15,20 +15,22 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>17.0.1</version>
+            <version>20</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>17.0.1</version>
+            <version>20</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.9.0</version>
+            <version>2.10.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
@@ -51,7 +53,7 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.36.0.2</version>
+            <version>3.40.1.0</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
@@ -63,8 +65,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>20</source>
+                    <target>20</target>
 <!--                    Dit zijn de versies die gebruikt worden voor de source code in het project en voor de bytecode die gecompileerd wordt. Men gebruikt best dezelfde versie voor source & target.-->
 
 <!--                    Waarom zetten we versie vast? Stel we publiceren de jam54 launcher met Java 17 en brengen wat later een update uit met Java 18. Sinds we bij het updaten van de jam54 launcher alleen de jar vernieuwen zal dit tot problemen leiden. De jar zal nu in Java 18 gecompileerd zijn, terwijl de JRE die bij de jam54 launcher nog versie 17 zal hebben. Sinds de versie van onze jam54 launcher jar hoger is dan de JRE waarmee het gerunned wordt lukt dit niet. Dit geeft een error van de vorm:-->
@@ -78,7 +80,7 @@
 
 <!--                    De JDK die wordt gebruikt door `maven-compiler-plugin` om onze jar te builden, is degene die staat in ons PATH-->
 
-<!--                    We gebruiken Java 17 als doel omdat dit de laagste versie die alles nog support dat wij gebruiken (Records, Switches, etc), verder is het ook mooi meegenomen dat het een LTS is en dezelfde versie als onze JavaFX. Dat is niet noodzakelijk though-->
+<!--                    We gebruiken Java 20 als doel omdat dit de meest recente versie van Java was op het moment dat we de launcher voor het eerst publiceerden, dat is dus de versie van de JRE die op mensen hun apparaat staat. Het spreekt dus voor zich dat we versie van source/target en/of de versie van de dependencies niet meer willen veranderen. Want tijdens het updaten van de launcher wordt enkel de Jam54Launcher.jar upgedate. De JRE/jar's van de dependencies blijven ongewijzigd.-->
 
                 </configuration>
             </plugin>
