Added an alert notifying the user the first time they install an app, explaining they can change the installation location in settings

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -70,3 +70,6 @@ Light=Light
 SelectDisplayLangauge=Select a display language.
 CouldntLaunchApplication=Couldn't launch application.
 CouldntRemoveShortcut=Couldn't remove shortcut.
+ApplicationWillBeInstalledAt=Uygulama şu adrese yüklenecektir: 
+ChangeInstallLocationInSettings=Farklı bir konum tercih ederseniz, ayarlardan değiştirebilirsiniz.
+Cancel=Cancel
