Removed the quotation marks around the application names in the translations

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -31,9 +31,9 @@ GoToStorePage=Go To Store Page
 INSTALL=INSTALL
 InstallationLocation=Installation Location
 INSTALLING=INSTALLING
-KindlyHoldForInstall=Kindly hold on whilst "{0}" concludes its installation procedure.
-KindlyHoldForUninstall=Kindly hold on until "{0}"'s uninstall procedure finishes.
-KindlyHoldForValidationProcedure=Kindly hold on whilst "{0}" concludes its file validation procedure.
+KindlyHoldForInstall=Kindly hold on whilst {0} concludes its installation procedure.
+KindlyHoldForUninstall=Kindly hold on until {0}'s uninstall procedure finishes.
+KindlyHoldForValidationProcedure=Kindly hold on whilst {0} concludes its file validation procedure.
 Language=Language
 LastUpdated=Last Updated
 LatestUpdate=Latest Update
