Made it so we don't have to release an entire update for the launcher, if the only thing we did was update an application

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/applicationsVersions.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/applicationsVersions.properties
@@ -1,10 +1,20 @@
-app0=0.3.1
-app1=1.0.0
-app2=1.0.0
-app3=1.0.0
-app4=0.10.0
-app5=1.0.0
-app6=1.0.0
-app7=1.4.1
-app8=1.9.0
-app9=1.1.9
+appVersion0=0.3.1
+appLatestUpdate0=1684925160
+appVersion1=1.0.0
+appLatestUpdate1=1533340800
+appVersion2=1.0.0
+appLatestUpdate2=1533340800
+appVersion3=1.0.0
+appLatestUpdate3=1534291200
+appVersion4=0.10.0
+appLatestUpdate4=1574643600
+appVersion5=1.0.0
+appLatestUpdate5=1616029200
+appVersion6=1.0.0
+appLatestUpdate6=1587168000
+appVersion7=1.4.1
+appLatestUpdate7=1684936200
+appVersion8=1.9.0
+appLatestUpdate8=1653004800
+appVersion9=1.1.9
+appLatestUpdate9=1657238400
