--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/applicationsVersions.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/applicationsVersions.properties
@@ -18,3 +18,5 @@ appVersion8=1.9.0
 appLatestUpdate8=1653004800
 appVersion9=1.1.9
 appLatestUpdate9=1657238400
+appVersion10=1.0.0
+appLatestUpdate10=1692715543
