--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Couldn't remove shortcut.
 ApplicationWillBeInstalledAt=Uygulama şu adrese yüklenecektir: 
 ChangeInstallLocationInSettings=Farklı bir konum tercih ederseniz, ayarlardan değiştirebilirsiniz.
 Cancel=Cancel
+FailedDownloadingFiles=Failed to download the required files after multiple retries.
