Update `ChangeInstallLocationInSettings` translation to make it clearer

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -70,7 +70,7 @@ Light=Light
 SelectDisplayLangauge=Select a display language.
 CouldntLaunchApplication=Couldn't launch application.
 CouldntRemoveShortcut=Couldn't remove shortcut.
-ApplicationWillBeInstalledAt=Uygulama şu adrese yüklenecektir: 
-ChangeInstallLocationInSettings=Farklı bir konum tercih ederseniz, ayarlardan değiştirebilirsiniz.
+ApplicationWillBeInstalledAt=The application will be installed at: 
+ChangeInstallLocationInSettings=If you prefer the application to be installed elsewhere, simply press "Cancel" and adjust the installation location in the Jam54 Launcher's settings.
 Cancel=Cancel
 FailedDownloadingFiles=Failed to download the required files after multiple retries.
