Refactor the way shortcuts are created. Rather than making a shortcut to a specific application's executable, a shortcut is created to the Jam54 Launcher with the application id as a CLI argument. This way the shortcuts will still work to launch applications, even after the installation location was changed after a shortcut was created

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -77,3 +77,4 @@ FailedDownloadingFiles=Failed to download the required files after multiple retr
 InsufficientPrivileges=The Jam54 Launhcer has insufficient privileges to access this directory: {0}. The requested action cannot be performed. Relaunch the Jam54 Launcher as administrator to continue
 MovingFiles=Moving files, please wait.
 NotAllOldFilesDeleted=The relocation of the installation directory to the new location was successful. However, due to certain applications being in use, some files could not be removed from the old location: {0}.
+ApplicationCouldNotBeLaunched=The application could not be launched. Please ensure the application is installed correctly through the Jam54 Launcher. Would you like to open the Jam54 Launcher now?
