Add tooltips to social icons on the SettingsWindow

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -79,3 +79,4 @@ MovingFiles=Moving files, please wait.
 NotAllOldFilesDeleted=The relocation of the installation directory to the new location was successful. However, due to certain applications being in use, some files could not be removed from the old location: {0}.
 ApplicationCouldNotBeLaunched=The application could not be launched. Please ensure the application is installed correctly through the Jam54 Launcher. Would you like to open the Jam54 Launcher now?
 APPLYINGPATCH=APPLYING PATCH
+Email=Email
