Add the GUI part of the AvailableAppUpdatesWindow

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -80,3 +80,8 @@ NotAllOldFilesDeleted=The relocation of the installation directory to the new lo
 ApplicationCouldNotBeLaunched=The application could not be launched. Please ensure the application is installed correctly through the Jam54 Launcher. Would you like to open the Jam54 Launcher now?
 APPLYINGPATCH=APPLYING PATCH
 Email=Email
+PendingApplicationUpdates=Pending application updates
+UpdateAll=Update all
+NoAvailableUpdates=No updates available at the moment. All installed applications are up to date.
+InstalledVersion=Installed version
+AvailableVersion=Available version
