Added a radial progression bar + textual description of the ongoing update process to the `AvailableAppUpdatesWindow`

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -85,3 +85,5 @@ UpdateAll=Update all
 NoAvailableUpdates=No updates available at the moment. All installed applications are up to date.
 InstalledVersion=Installed version
 AvailableVersion=Available version
+InstallationQueued=Installation queued
+UpdateQueued=Update queued
