--- a/Jam54_Launcher/pom.xml
+++ b/Jam54_Launcher/pom.xml
@@ -57,6 +57,12 @@
             <version>3.43.0.0</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.nothome/javaxdelta -->
+        <dependency>
+            <groupId>com.nothome</groupId>
+            <artifactId>javaxdelta</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
