Replace the chunks approach to update existing apps with a delta compression based approach

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n.properties
@@ -89,3 +89,5 @@ InstallationQueued=Installation queued
 UpdateQueued=Update queued
 InstallAll=Install all
 ApplicationsAvailableToInstall=Applications available to install
+DOWNLOADINGPATCH=DOWNLOADING PATCH
+VERIFYING=VERIFYING
