feat: add Honey Horizon

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/applicationsVersions.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/applicationsVersions.properties
@@ -20,3 +20,5 @@ appVersion9=1.1.15
 appLatestUpdate9=1733048627
 appVersion10=1.7.6
 appLatestUpdate10=1749304232
+appVersion11=1.0.0
+appLatestUpdate11=1724170200
